# TravianBot

./: .gitignore  CMakeLists.txt  README.md  main.cpp
config/: debug_farm_page.html  debug_train_page.html  debug_train_response_17613.html  debug_train_response_42802.html  farm_config.json  settings.ini.example  troop_config.json
src/managers/: BuildQueueManager.cpp  BuildQueueManager.h  FarmListManager.cpp  FarmListManager.h  TroopQueueManager.cpp  TroopQueueManager.h
src/models/: Account.cpp  Account.h  Building.cpp  Building.h  Village.cpp  Village.h
src/network/: TravianDataFetcher.cpp  TravianDataFetcher.h  Travianrequestmanager.cpp  Travianrequestmanager.h  telegramlogger.cpp  telegramlogger.h  telegramnotifier.cpp  telegramnotifier.h
src/parsers/: HtmlParser.cpp  HtmlParser.h  HtmlSelectors.cpp  HtmlSelectors.h  VillageParser.cpp  VillageParser.h
src/ui/: Main.qml  TravianUiBridge.cpp  TravianUiBridge.h
